# pygments-tools

./: .gitignore  Readme.md  pyproject.toml
pygmentsTools/: .gitignore  cli.py  monkeyPatches.patch
scripts/: extractMonkeyPatches  installEditablePygTracerCommands  renewMonkeyPatches
